[css-multicol] column-span:all should not become a spanner, when inside transform (or other elements which establish fixedpos containing block), per csswg resolution
Categories
(Core :: Layout: Columns, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox100 | --- | fixed |
People
(Reporter: mozilla-apprentice, Assigned: dshin)
References
Details
Attachments
(4 files)
A resolution was made for csswg-drafts/#6805.
[css-multicol] Should column-span:all inside a transform really become a spanner?
- RESOLVED: Accept proposal that elements which establish fixedpos containing block also block descendant spanners
Updated•4 years ago
|
Comment 1•4 years ago
|
||
It looks like we should just add a new case to https://searchfox.org/mozilla-central/rev/131f3af9a49d2203adb7b7ef30dcc37c9f1aa10b/layout/base/nsCSSFrameConstructor.cpp#355-359
Comment 2•4 years ago
|
||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Comment 4•4 years ago
|
||
Comment 5•4 years ago
|
||
STR:
Compare attached testcase, non-reference case, and reference case.
ACTUAL RESULTS:
Testcase 1 matches the non-reference case.
Testcase 1 does not match the reference case.
EXPECTED RESULTS:
Testcase 1 should not match the non-reference case.
Testcase 1 should not the reference case.
Firefox Nightly v100 gives ACTUAL RESULTS.
Chrome dev-channel v100 gives EXPECTED RESULTS (i.e. it looks like they've already implemented this spec change, apparently in https://bugs.chromium.org/p/chromium/issues/detail?id=1267847 )
Comment 6•4 years ago
|
||
Note that there's an existing web-platform-test for this ( https://searchfox.org/mozilla-central/rev/eeeba8183d3268e0d563c2becf9f4adc21a37368/testing/web-platform/tests/css/css-multicol/multicol-span-all-017.tentative.html ) but it doesn't have a reference case specified, so it's inactive right now. I called the author/reviewer's attention to this in https://github.com/web-platform-tests/wpt/pull/31837#issuecomment-1063355494 and presumably that will be fixed soon.
Comment 7•4 years ago
|
||
(In reply to Daniel Holbert [:dholbert] from comment #6)
Note that there's an existing web-platform-test for this ( https://searchfox.org/mozilla-central/rev/eeeba8183d3268e0d563c2becf9f4adc21a37368/testing/web-platform/tests/css/css-multicol/multicol-span-all-017.tentative.html ) but it doesn't have a reference case specified, so it's inactive
update: this test was fixed (and .tentative dropped from its name).
It now lives here:
https://searchfox.org/mozilla-central/source/testing/web-platform/tests/css/css-multicol/multicol-span-all-017.html
https://wpt.fyi/results/css/css-multicol/multicol-span-all-017.html
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Comment 8•4 years ago
|
||
Comment 11•4 years ago
|
||
| bugherder | ||
Description
•